--- a/lrk.settings
+++ b/lrk.settings
@@ -1,3 +1,11 @@
-version=0.0.1
 display.scale=3
 display.fullscreen=false
+audio.master=1.0
+audio.music=0.8
+audio.sfx=1.0
+control.up=17
+control.down=31
+control.left=30
+control.right=32
+control.select=57
+control.back=14
