--- a/lrk.settings
+++ b/lrk.settings
@@ -1,8 +1,8 @@
-display.scale=4.091111
-display.width=1841
-display.height=1057
-display.position.x=71
-display.position.y=-8
+display.width=838
+display.height=754
+display.position.x=650
+display.position.y=188
+display.maximized=false
 input.up=17
 input.down=31
 input.left=30
