--- a/lrk.settings
+++ b/lrk.settings
@@ -1,8 +1,9 @@
-display.width=1857
-display.height=1057
-display.position.x=1975
-display.position.y=-8
-display.maximized=true
+display.width=1675
+display.height=959
+display.position.x=174
+display.position.y=32
+display.maximized=false
+display.scale=3.0
 input.up=17
 input.down=31
 input.left=30
