Implemented a rednercomponent class.
Added a forground vs. background system (i.e. HUD is fore, gameplay is back)

Moved mouse listener to input manager

Added UI components to LRK states.

implement splash screen with new uicomponetns

--- a/lrk.settings
+++ b/lrk.settings
@@ -1,9 +1,10 @@
 display.width=1507
 display.height=870
-display.position.x=208
-display.position.y=94
+display.position.x=173
+display.position.y=68
 display.maximized=false
-display.scale=2.0
+display.scale.foreground=1.0
+display.scale.background=1.0
 input.up=17
 input.down=31
 input.left=30
