--- a/lrk.settings
+++ b/lrk.settings
@@ -1,10 +1,10 @@
-display.width=1507
-display.height=870
-display.position.x=173
-display.position.y=68
-display.maximized=false
-display.scale.foreground=1.0
-display.scale.background=1.0
+display.width=1841
+display.height=1057
+display.position.x=71
+display.position.y=-8
+display.maximized=true
+display.scale.foreground=2.0
+display.scale.background=3.2875
 input.up=17
 input.down=31
 input.left=30
